--- a/package.json
+++ b/package.json
@@ -34,12 +34,17 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@types/jest": "^26.0.19",
+    "@types/react": "^17.0.0",
+    "@types/react-native": "^0.63.40",
+    "@types/react-test-renderer": "^17.0.0",
     "babel-eslint": "^10.0.3",
     "babel-preset-expo": "8.3.0",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-native": "^3.8.1"
+    "eslint-plugin-react-native": "^3.8.1",
+    "typescript": "^4.1.3"
   },
   "private": true
 }
